--- a/stats.html
+++ b/stats.html
@@ -94,7 +94,7 @@ body {
 
 .stats-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
   margin-bottom: 20px;
 }
@@ -125,7 +125,7 @@ body {
   border-radius: 12px;
   padding: 20px;
   position: relative;
-  height: 300px;
+  height: 220px;
 }
 
 .graph-placeholder {
@@ -142,15 +142,16 @@ body {
   align-items: flex-end;
   justify-content: space-around;
   height: 100%;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 .bar {
-  width: 30px;
+  width: 24px;
   background: linear-gradient(to top, var(--primary), var(--secondary));
   border-radius: 4px 4px 0 0;
   position: relative;
   transition: height 0.5s ease;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .bar-label {
@@ -158,7 +159,7 @@ body {
   bottom: -25px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   color: var(--text-muted);
   white-space: nowrap;
 }
@@ -168,7 +169,7 @@ body {
   top: -25px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   font-weight: 600;
   color: var(--text);
 }
@@ -177,12 +178,25 @@ body {
   position: absolute;
   top: 10px;
   left: 20px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 
 .url-container {
   margin-top: 15px;
+}
+
+.sharing-note {
+  background: rgba(16, 185, 129, 0.1);
+  border-left: 4px solid var(--success);
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  font-size: 0.95rem;
+}
+
+.sharing-note strong {
+  color: var(--success);
 }
 
 .url-box {
@@ -276,7 +290,7 @@ body {
 }
 
 .daily-list {
-  max-height: 200px;
+  max-height: 150px;
   overflow-y: auto;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 10px;
@@ -286,8 +300,9 @@ body {
 .daily-item {
   display: flex;
   justify-content: space-between;
-  padding: 10px 0;
+  padding: 8px 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  font-size: 0.9rem;
 }
 
 .daily-item:last-child {
@@ -349,22 +364,26 @@ body {
   }
   
   .graph-container {
-    height: 250px;
+    height: 200px;
     padding: 15px;
   }
   
   .bar {
-    width: 20px;
+    width: 18px;
   }
   
   .bar-label {
-    font-size: 0.7rem;
+    font-size: 0.65rem;
     bottom: -20px;
   }
   
   .bar-value {
-    font-size: 0.7rem;
+    font-size: 0.65rem;
     top: -20px;
+  }
+  
+  .daily-list {
+    max-height: 120px;
   }
 }
 </style>
@@ -390,7 +409,7 @@ body {
     
     <!-- Graph Container -->
     <div class="graph-container" id="graphContainer" style="display: none;">
-      <div class="graph-title">Daily Clicks Overview</div>
+      <div class="graph-title">Daily Clicks Overview (Last 7 Days)</div>
       <div class="graph-bar" id="graphBar"></div>
     </div>
   </div>
@@ -399,6 +418,10 @@ body {
     <div class="card-header">
       <div class="icon">🔗</div>
       <h2>Your Sharing URLs</h2>
+    </div>
+
+    <div class="sharing-note">
+      <strong>Share these URLs</strong> on WhatsApp, Facebook, or other platforms to get more users to click and view the ads. The more people that view your links, the more revenue you'll earn!
     </div>
 
     <div class="url-container">
@@ -517,7 +540,7 @@ function createGraph(dailyStats) {
   
   // Create bars
   dates.forEach((date, index) => {
-    const barHeight = (values[index] / maxValue) * 80 + 10; // 80% of container height + 10% minimum
+    const barHeight = (values[index] / maxValue) * 70 + 15; // 70% of container height + 15% minimum
     const bar = document.createElement('div');
     bar.className = 'bar';
     bar.style.height = `${barHeight}%`;
@@ -540,6 +563,23 @@ function createGraph(dailyStats) {
   
   // Show the graph
   graphContainer.style.display = 'block';
+}
+
+// Auto-scroll function to show users there's content below
+function autoScrollToGraph() {
+  // Check if we've already shown the auto-scroll for this session
+  if (!sessionStorage.getItem('hasAutoScrolled')) {
+    setTimeout(() => {
+      const graphContainer = document.getElementById('graphContainer');
+      if (graphContainer && graphContainer.style.display !== 'none') {
+        graphContainer.scrollIntoView({ 
+          behavior: 'smooth', 
+          block: 'center' 
+        });
+        sessionStorage.setItem('hasAutoScrolled', 'true');
+      }
+    }, 1500);
+  }
 }
 
 async function loadStats() {
@@ -650,6 +690,9 @@ async function loadStats() {
     }
 
     statsContainer.innerHTML = html;
+    
+    // Auto-scroll to graph after content loads
+    autoScrollToGraph();
   } catch (error) {
     console.error("Error loading stats:", error);
     statsContainer.innerHTML = `
