--- a/stats.html
+++ b/stats.html
@@ -43,14 +43,14 @@ body {
 
 .header {
   text-align: center;
-  margin-bottom: 30px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 15px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .header h1 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
+  font-size: 2.2rem;
+  margin-bottom: 8px;
   background: linear-gradient(90deg, var(--primary), var(--secondary));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -59,73 +59,73 @@ body {
 
 .header p {
   color: var(--text-muted);
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .card {
   background: var(--card-bg);
   border-radius: 16px;
-  padding: 25px;
-  margin-bottom: 25px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--card-border);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+  transform: translateY(-3px);
+  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.4);
 }
 
 .card-header {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .card-header h2 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin-left: 10px;
 }
 
 .icon {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
-.stats-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.stats-container {
+  display: flex;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .stat-box {
+  flex: 1;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 12px;
-  padding: 20px;
+  padding: 15px;
   text-align: center;
   border-left: 4px solid var(--primary);
 }
 
 .stat-value {
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-weight: 700;
-  margin: 10px 0;
+  margin: 5px 0;
   color: var(--secondary);
 }
 
 .stat-label {
   color: var(--text-muted);
-  font-size: 0.9rem;
+  font-size: 0.85rem;
 }
 
 .graph-container {
-  margin: 25px 0;
+  margin: 15px 0;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 12px;
-  padding: 20px;
+  padding: 15px;
   position: relative;
-  height: 220px;
+  height: 180px;
 }
 
 .graph-placeholder {
@@ -134,7 +134,7 @@ body {
   align-items: center;
   height: 100%;
   color: var(--text-muted);
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .graph-bar {
@@ -146,7 +146,7 @@ body {
 }
 
 .bar {
-  width: 24px;
+  width: 22px;
   background: linear-gradient(to top, var(--primary), var(--secondary));
   border-radius: 4px 4px 0 0;
   position: relative;
@@ -156,43 +156,43 @@ body {
 
 .bar-label {
   position: absolute;
-  bottom: -25px;
+  bottom: -20px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   color: var(--text-muted);
   white-space: nowrap;
 }
 
 .bar-value {
   position: absolute;
-  top: -25px;
+  top: -20px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   font-weight: 600;
   color: var(--text);
 }
 
 .graph-title {
   position: absolute;
-  top: 10px;
-  left: 20px;
-  font-size: 1rem;
+  top: 8px;
+  left: 15px;
+  font-size: 0.9rem;
   font-weight: 600;
 }
 
 .url-container {
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .sharing-note {
   background: rgba(16, 185, 129, 0.1);
   border-left: 4px solid var(--success);
-  padding: 15px;
+  padding: 12px;
   border-radius: 8px;
-  margin-bottom: 20px;
-  font-size: 0.95rem;
+  margin-bottom: 15px;
+  font-size: 0.9rem;
 }
 
 .sharing-note strong {
@@ -202,29 +202,29 @@ body {
 .url-box {
   background: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  padding: 15px;
-  margin-bottom: 15px;
+  padding: 12px;
+  margin-bottom: 12px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   position: relative;
   word-break: break-all;
 }
 
 .url-label {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   color: var(--text-muted);
-  margin-bottom: 8px;
+  margin-bottom: 6px;
 }
 
 .copy-btn {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 12px;
+  right: 12px;
   background: var(--primary);
   color: white;
   border: none;
-  border-radius: 8px;
-  padding: 8px 15px;
-  font-size: 0.85rem;
+  border-radius: 6px;
+  padding: 6px 12px;
+  font-size: 0.8rem;
   cursor: pointer;
   transition: all 0.2s ease;
 }
@@ -240,17 +240,17 @@ body {
 
 .action-buttons {
   display: flex;
-  gap: 15px;
-  margin-top: 25px;
+  gap: 12px;
+  margin-top: 20px;
 }
 
 .btn {
   flex: 1;
-  padding: 14px 20px;
-  border-radius: 10px;
+  padding: 12px 16px;
+  border-radius: 8px;
   border: none;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 0.9rem;
   cursor: pointer;
   transition: all 0.3s ease;
   text-align: center;
@@ -265,8 +265,8 @@ body {
 
 .btn-primary:hover {
   background: var(--primary-dark);
-  transform: translateY(-3px);
-  box-shadow: 0 5px 15px rgba(99, 102, 241, 0.4);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(99, 102, 241, 0.4);
 }
 
 .btn-secondary {
@@ -277,32 +277,32 @@ body {
 
 .btn-secondary:hover {
   background: rgba(255, 255, 255, 0.15);
-  transform: translateY(-3px);
+  transform: translateY(-2px);
 }
 
 .daily-stats {
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .daily-stats h3 {
-  margin-bottom: 15px;
-  font-size: 1.2rem;
+  margin-bottom: 10px;
+  font-size: 1.1rem;
 }
 
 .daily-list {
-  max-height: 150px;
+  max-height: 120px;
   overflow-y: auto;
   background: rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  padding: 15px;
+  border-radius: 8px;
+  padding: 12px;
 }
 
 .daily-item {
   display: flex;
   justify-content: space-between;
-  padding: 8px 0;
+  padding: 6px 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-  font-size: 0.9rem;
+  font-size: 0.85rem;
 }
 
 .daily-item:last-child {
@@ -315,9 +315,9 @@ body {
   right: 20px;
   background: var(--success);
   color: white;
-  padding: 15px 25px;
-  border-radius: 10px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  padding: 12px 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   transform: translateY(100px);
   opacity: 0;
   transition: all 0.3s ease;
@@ -331,7 +331,7 @@ body {
 
 .loading {
   text-align: center;
-  padding: 30px;
+  padding: 20px;
   color: var(--text-muted);
 }
 
@@ -339,10 +339,10 @@ body {
   border: 3px solid rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   border-top: 3px solid var(--primary);
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   animation: spin 1s linear infinite;
-  margin: 0 auto 15px;
+  margin: 0 auto 10px;
 }
 
 @keyframes spin {
@@ -351,8 +351,9 @@ body {
 }
 
 @media (max-width: 600px) {
-  .stats-grid {
-    grid-template-columns: 1fr;
+  .stats-container {
+    flex-direction: column;
+    gap: 12px;
   }
 
   .action-buttons {
@@ -360,30 +361,34 @@ body {
   }
 
   .card {
-    padding: 20px 15px;
+    padding: 15px 12px;
   }
   
   .graph-container {
-    height: 200px;
-    padding: 15px;
+    height: 160px;
+    padding: 12px;
   }
   
   .bar {
-    width: 18px;
+    width: 16px;
   }
   
   .bar-label {
-    font-size: 0.65rem;
-    bottom: -20px;
+    font-size: 0.6rem;
+    bottom: -18px;
   }
   
   .bar-value {
-    font-size: 0.65rem;
-    top: -20px;
+    font-size: 0.6rem;
+    top: -18px;
   }
   
   .daily-list {
-    max-height: 120px;
+    max-height: 100px;
+  }
+  
+  .header h1 {
+    font-size: 1.8rem;
   }
 }
 </style>
@@ -400,7 +405,7 @@ body {
       <div class="icon">📊</div>
       <h2>Your Performance Stats</h2>
     </div>
-    <p id="welcome" style="margin-bottom: 20px;"></p>
+    <p id="welcome" style="margin-bottom: 15px;"></p>
 
     <div id="statsDetails" class="loading">
       <div class="spinner"></div>
@@ -648,9 +653,9 @@ async function loadStats() {
       }
     }
 
-    // Build HTML display
+    // Build HTML display with stats side by side
     let html = `
-      <div class="stats-grid">
+      <div class="stats-container">
         <div class="stat-box">
           <div class="stat-label">Total Clicks</div>
           <div class="stat-value">${stats.clicks.toLocaleString()}</div>
