--- a/stats.html
+++ b/stats.html
@@ -426,7 +426,7 @@ body {
     </div>
 
     <div class="sharing-note">
-      <strong>Share these URLs</strong> on WhatsApp, Facebook, or other platforms to get more users to click and view the ads. The more people that view your links, the more revenue you'll earn!
+      <strong>Share these URLs</strong> on WhatsApp, Facebook, or other platforms to get more users to click and view the ads. The more people that view your links, the more revenue you'll earn
     </div>
 
     <div class="url-container">
@@ -488,7 +488,7 @@ document.querySelectorAll('.copy-btn').forEach(button => {
     let textToCopy = document.getElementById(urlId).textContent;
 
     if (isInvite) {
-      textToCopy = `Custom Track URL: ${trackUrl}\nInvite URL: ${inviteUrl}\n\nJoin me on AdRevenuePro - a user-friendly ad system that provides access to ad monetization through direct advertising. It's an easy way to generate revenue by sharing ad links and earning cash as people view and click those links!`;
+      textToCopy = `Custom Track URL: ${trackUrl}\nGet started: ${inviteUrl}\n\nJoin me on AdRevenuePro - a user-friendly ad system that provides access to ad monetization through direct advertising. It's an easy way to generate revenue by creating and sharing ad links and earning cash as people view and click those links!`;
     }
 
     // Copy to clipboard
