--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ body{min-height:100vh;display:flex;align-items:center;justify-content:center;pad
       </div>
 
       <div class="form-group">
-        <label class="form-label">Campaign Name</label>
-        <input id="specificText" class="form-input" placeholder="e.g. SummerPromo" autocomplete="off" />
+        <label class="form-label">unique identification</label>
+        <input id="specificText" class="form-input" placeholder="e.g. favourite colour" autocomplete="off" />
       </div>
 
       <div class="form-group">
@@ -194,8 +194,8 @@ body{min-height:100vh;display:flex;align-items:center;justify-content:center;pad
       </div>
 
       <div class="form-group">
-        <label class="form-label">Campaign Name</label>
-        <input id="loginSpecificText" class="form-input" placeholder="Campaign name" autocomplete="off" />
+        <label class="form-label">unique identification</label>
+        <input id="loginSpecificText" class="form-input" placeholder="e.g favourite colour" autocomplete="off" />
       </div>
 
       <div class="form-group">
