--- a/stats.html
+++ b/stats.html
@@ -397,7 +397,7 @@ body {
 <div class="container">
   <div class="header">
     <h1>AdRevenuePro Dashboard</h1>
-    <p>Track your earnings and manage your links</p>
+    <p>Track your earnings and manage your links{wait for 3 minutes before sharing your link}</p>
   </div>
 
   <div class="card">
